--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
-/Scripts/Environment/Env.gd
-Scripts/Environment/Env.gd
+Scripts/Environment/
+/Scripts/Environment
