--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 # Godot 4+ specific ignores
 .godot/
-/android/
-Scripts/Environment/
-/Scripts/Environment
+.nomedia
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_credentials.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+Scripts/Environment/Env.gd
+Scripts/Environment/Env.gd
